Fixed overflowing issues, though issues still persist with mobile landscape orientation

--- a/personal-website/src/components/Header.module.css
+++ b/personal-website/src/components/Header.module.css
@@ -171,6 +171,7 @@ a:hover {
     opacity: 0;
     padding:0;
     margin: 0;
+    overflow-x: hidden;
 }
 
 
