--- a/personal-website/src/pages/Home.module.css
+++ b/personal-website/src/pages/Home.module.css
@@ -7,11 +7,8 @@
     width:100vw;
     display:flex;
     flex-direction: column;
+    overflow: auto;
 }
-
-
-
-
 
 
 .contentContainer{
@@ -48,10 +45,6 @@
 .content a {
     text-decoration: none;    
 }
-
-
-
-
 
 
 .imageContainer{
